--- a/src/resources/tasks.json
+++ b/src/resources/tasks.json
@@ -1,1 +1,1 @@
-[{"id": "1","description": "Next task","status": "TODO","createdAt": "2025-01-11T15","updatedAt": "2025-01-11T15"},{"id": "1","description": "Second","status": "TODO","createdAt": "2025-01-11T16:00:24.944015","updatedAt": "2025-01-11T16:00:24.944176"}]
+[{"id": "97987","description": "Updated Task1","status": "IN_PROGRESS","createdAt": "2025-01-12T00","updatedAt": "2025-01-12T00"},{"id": "20624","description": "Test3","status": "DONE","createdAt": "2025-01-12T00","updatedAt": "2025-01-12T00"}]
